# repo-security-scanner

./: .gitignore  LICENSE  README.md  agent.py  config.example.yml  pyproject.toml  requirements.txt  security-scan.yml
.github/workflows/: security-scan-org.yml  security-scan.yml
src/secaudit/: __init__.py  __main__.py  cli.py  config.py  models.py  orchestrator.py
src/secaudit/github/: client.py  pr_commenter.py  sarif.py
src/secaudit/persistence/: dedup.py  store.py
src/secaudit/reporters/: base.py  email.py  github_reporter.py  json_export.py  notion.py  sarif_reporter.py
src/secaudit/scanners/: __init__.py  base.py  checkov.py  gitleaks.py  hadolint.py  licenses.py  npm_audit.py  pip_audit.py  semgrep.py  trivy.py
src/secaudit/triager/: claude.py
src/secaudit/utils/: rate_limiter.py  retry.py  subprocess_runner.py
tests/: conftest.py  test_cli.py  test_config.py  test_github.py  test_orchestrator.py  test_orchestrator_integration.py  test_triager.py  test_utils.py
tests/persistence/: test_dedup.py  test_store.py
tests/reporters/: test_email_notion.py  test_reporters.py
tests/scanners/: test_scanners.py
